--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,67 +30,97 @@
 </head>
 
 <body>
-
 	<nav class="navbar navbar-expand-lg navbar-dark bg-default">
 
 		<div id="narvbar_left">
+			
 			<a class="navbar-brand" href="/">Satisfact°</a>
-
-			<a class="navbar-brand" href="/static/index_about_us">About Us</a>
-			<a class="navbar-brand" href="/static/index_our_services">Our services</a>
-			<a class="navbar-brand" href="/static/index_contact_us">Contact Us</a>
 		</div>
-		<div class="collapse navbar-collapse" id="navbar-default">
-			<div class="navbar-collapse-header">
-				<div class="row">
-					<div class="col-6 collapse-brand">
-						<a href="./index.html">
-							<img alt="image" src="./assets/img/brand/blue.png">
-						</a>
+
+		<div id="navbar_right">
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-default" aria-controls="navbar-default" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>	
+				<div class="collapse navbar-collapse" id="navbar-default">
+					<div class="navbar-collapse-header">
+						
+						<div class="row">
+							<div class="col-6 collapse-brand">
+								<a href="./index.html">
+									<img alt="image" src="./assets/img/brand/blue.png">
+								</a>
+							</div>
+							<div class="col-6 collapse-close">
+								<button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbar-default" aria-controls="navbar-default" aria-expanded="false" aria-label="Toggle navigation">
+									<span></span>
+									<span></span>
+								</button>
+							</div>
+						</div>
 					</div>
-					<div class="col-6 collapse-close">
-						<button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbar-default" aria-controls="navbar-default" aria-expanded="false" aria-label="Toggle navigation">
-							<span></span>
-							<span></span>
-						</button>
-					</div>
+						<ul class="navbar-nav ml-lg-auto">
+							<li class="nav-item dropdown">
+								<a class="nav-link nav-link-icon" href="#" id="navbar-default_dropdown_1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+									<i class="fas fa-user-circle"></i>
+									<span class="nav-link-inner--text d-lg-none">Profile</span>
+								</a>
+									<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbar-default_dropdown_1">
+										<a class="dropdown-item" href="#">mon profile</a>
+										<a class="dropdown-item" href="#">sign up</a>
+										<a class="dropdown-item" href="#">log in</a>
+										<a class="dropdown-item" href="#">disconect</a>
+									</div>
+							</li>
+							<li class="nav-item dropdown">
+								<a class="nav-link nav-link-icon" href="#" id="navbar-default_dropdown_1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+									<i class="fas fa-cog"></i>
+									<span class="nav-link-inner--text d-lg-none">Settings</span>
+								</a>
+									<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbar-default_dropdown_1">
+										<a class="dropdown-item" href="#">????</a>
+										<a class="dropdown-item" href="#">????</a>
+											<div class="dropdown-divider"></div>
+												<p>Dark / Light</p>
+												<label class="custom-toggle">
+													<input type="checkbox">
+													<span class="custom-toggle-slider rounded-circle"></span>
+												</label>
+									</div>
+							</li> 
+						</ul>
+				</div>
+</nav>
+
+<%= yield %>
+
+	<div class="container">
+		<div class="row align-items-center justify-content-md-between">
+			<div class="col-md-6">
+				<div class="copyright">
+					© 2019 <a href="https://www.creative-tim.com" target="_blank">Satisfact°, Project final T.H.P</a>.
 				</div>
 			</div>
-			<ul class="navbar-nav ml-lg-auto">
-
-				<li class="nav-item dropdown">
-					<a class="nav-link nav-link-icon" href="#" id="navbar-default_dropdown_1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-						<i class="fas fa-user-circle"></i>
-						<span class="nav-link-inner--text d-lg-none">Profile</span>
-					</a>
-					<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbar-default_dropdown_1">
-						<a class="dropdown-item" href="#">mon profile</a>
-						<a class="dropdown-item" href="#">sign up</a>
-						<a class="dropdown-item" href="#">log in</a>
-						<a class="dropdown-item" href="#">disconect</a>
-					</div>
-				</li>
+			<div class="col-md-6">
+				<a class="navbar-brand" href="/static/index_about_us">About Us</a>
 				
-				<li class="nav-item dropdown">
-					<a class="nav-link nav-link-icon" href="#" id="navbar-default_dropdown_1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-						<i class="fas fa-cog"></i>
-						<span class="nav-link-inner--text d-lg-none">Settings</span>
-					</a>
-					<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbar-default_dropdown_1">
-						<a class="dropdown-item" href="#">????</a>
-						<a class="dropdown-item" href="#">????</a>
-						<div class="dropdown-divider"></div>
-						<p>Dark / Light</p>
-						<label class="custom-toggle">
-							<input type="checkbox">
-							<span class="custom-toggle-slider rounded-circle"></span>
-						</label>
-					</div>
-				</li>    	
-
-			</ul>
+				<a class="navbar-brand" href="/static/index_our_services">Our services</a>
+				<a class="navbar-brand" href="/static/index_contact_us">Contact Us</a>
+				<ul class="nav nav-footer justify-content-end">
+					<li class="nav-item">
+						<a href="https://www.creative-tim.com" class="nav-link" target="_blank">Creative Tim</a>
+					</li>
+					<li class="nav-item">
+						<a href="https://www.creative-tim.com/presentation" class="nav-link" target="_blank">About Us</a>
+					</li>
+					<li class="nav-item">
+						<a href="http://blog.creative-tim.com" class="nav-link" target="_blank">Blog</a>
+					</li>
+					<li class="nav-item">
+						<a href="https://github.com/creativetimofficial/argon-design-system/blob/master/LICENSE.md" class="nav-link" target="_blank">MIT License</a>
+					</li>
+				</ul>
+			</div>
 		</div>
-	</nav>
-	<%= yield %>
+	</div>
 </body>
 </html>
