--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -64,12 +64,18 @@
 									<i class="fas fa-user-circle"></i>
 									<span class="nav-link-inner--text d-lg-none">Profile</span>
 								</a>
+
+								<% if user_signed_in? %>
 									<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbar-default_dropdown_1">
-										<a class="dropdown-item" href="#">mon profile</a>
-										<a class="dropdown-item" href="#">sign up</a>
-										<a class="dropdown-item" href="#">log in</a>
-										<a class="dropdown-item" href="#">disconect</a>
+										<a class="dropdown-item" href="#">My profile</a>
+										<%= link_to "Disconnect", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
 									</div>
+								<% else %>
+										<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbar-default_dropdown_1">
+											<%= link_to "Sign in", new_user_session_path, class: "dropdown-item" %>
+											<%= link_to "Sign up", new_user_registration_path, class: "dropdown-item" %>
+										</div>
+								<% end %>
 							</li>
 							<li class="nav-item dropdown">
 								<a class="nav-link nav-link-icon" href="#" id="navbar-default_dropdown_1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
