--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,7 @@
 			<a class="navbar-brand" href="/">Satisfact°</a>
 		</div>
 
-		<div id="navbar_right">
+		
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-default" aria-controls="navbar-default" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>	
@@ -95,35 +95,31 @@
 							</li> 
 						</ul>
 					</div>
-				</div>
+				
 </nav>
 
 <%= yield %>
 
-	<div class="container">
+	<div>
 		<div class="row align-items-center justify-content-md-between">
 			<div class="col-md-6">
 				<div class="copyright">
-					© 2019 <a href="https://www.creative-tim.com" target="_blank">Satisfact°, Project final T.H.P</a>.
+					© 2019 <a href="/" target="_blank">Satisfact°, Project final T.H.P</a>.
 				</div>
 			</div>
 			<div class="col-md-6">
-				<a class="navbar-brand" href="/static/index_about_us">About Us</a>
-
-				<a class="navbar-brand" href="/static/index_our_services">Our services</a>
-				<a class="navbar-brand" href="/static/index_contact_us">Contact Us</a>
 				<ul class="nav nav-footer justify-content-end">
 					<li class="nav-item">
-						<a href="https://www.creative-tim.com" class="nav-link" target="_blank">Creative Tim</a>
+						<%= link_to "About Us", static_index_about_us_path, class: "nav-link" %>
+						<!-- <a class="nav-link" target="_blank" href="/static/index_about_us">About Us</a> -->
 					</li>
 					<li class="nav-item">
-						<a href="https://www.creative-tim.com/presentation" class="nav-link" target="_blank">About Us</a>
+						<%= link_to "Our services", static_index_our_services_path, class: "nav-link" %>
+						<!-- <a class="nav-link" target="_blank" href="/static/index_our_services">Our services</a> -->
 					</li>
 					<li class="nav-item">
-						<a href="http://blog.creative-tim.com" class="nav-link" target="_blank">Blog</a>
-					</li>
-					<li class="nav-item">
-						<a href="https://github.com/creativetimofficial/argon-design-system/blob/master/LICENSE.md" class="nav-link" target="_blank">MIT License</a>
+						<%= link_to "Contact_us", static_index_contact_us_path, class: "nav-link" %>
+						<!-- <a class="nav-link" target="_blank" href="/static/index_contact_us">Contact Us</a> -->
 					</li>
 				</ul>
 			</div>
@@ -131,3 +127,10 @@
 	</div>
 </body>
 </html>
+
+				
+				
+				
+
+
+
