--- a/app/views/static/index_about_us.html.erb
+++ b/app/views/static/index_about_us.html.erb
@@ -13,123 +13,125 @@
 
             <div class="col-md-12 col-lg-4 mb-12 mb-lg-0">
                 <div class="px-4">
-                    <img src="../assets/images/aboutUs/sacha_tordjman.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="image">
-                        <div class="pt-4 text-center">
-                            <h5 class="title">
-                                <span class="d-block mb-1">Sacha Tordjman</span>
-                                <small class="h6 text-muted">Web Developer Junior</small>
-                            </h5>
-                                <div class="mt-3">
-                                    <a href="#" class="btn btn-default btn-icon-only rounded-circle">
-                                        <i class="fab fa-linkedin-in" aria-hidden="true"></i>
-                                    </a>
-                                    <a href="#" class="btn btn-default btn-icon-only rounded-circle">
-                                        <i class="fab fa-github" aria-hidden="true"></i>
-                                    </a>
-                                    <a href="#" class="btn btn-default btn-icon-only rounded-circle">
-                                        <i class="fab fa-twitter" aria-hidden="true"></i>
-                                    </a>
-                                </div>
+                    <img src="././assets/images/about_us/sacha_tordjman.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="image">
+                    <div class="pt-4 text-center">
+                        <h5 class="title">
+                            <span class="d-block mb-1">Sacha Tordjman</span>
+                            <small class="h6 text-muted">Web Developer Junior</small>
+                        </h5>
+                        <div class="mt-3">
+                            <a href="#" class="btn btn-default btn-icon-only rounded-circle">
+                                <i class="fab fa-linkedin-in" aria-hidden="true"></i>
+                            </a>
+                            <a href="#" class="btn btn-default btn-icon-only rounded-circle">
+                                <i class="fab fa-github" aria-hidden="true"></i>
+                            </a>
+                            <a href="#" class="btn btn-default btn-icon-only rounded-circle">
+                                <i class="fab fa-twitter" aria-hidden="true"></i>
+                            </a>
                         </div>
+                    </div>
                 </div>
             </div>
 
             <div class="col-md-12 col-lg-4 mb-12 mb-lg-0">
                 <div class="px-4">
-                    <img src="../assets/img/theme/team-2-800x800.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="image">
-                        <div class="pt-4 text-center">
-                            <h5 class="title">
-                                <span class="d-block mb-1">Tanguy Billon</span>
-                                <small class="h6 text-muted">Web Developer Junior</small>
-                            </h5>
-                                <div class="mt-3">
-                                    <a href="#" class="btn btn-default btn-icon-only rounded-circle">
-                                        <i class="fab fa-linkedin-in" aria-hidden="true"></i>
-                                    </a>
-                                    <a href="#" class="btn btn-default btn-icon-only rounded-circle">
-                                        <i class="fab fa-github" aria-hidden="true"></i>
-                                    </a>
-                                    <a href="#" class="btn btn-default btn-icon-only rounded-circle">
-                                        <i class="fab fa-twitter" aria-hidden="true"></i>
-                                    </a>
-                                </div>
+                    <img src="././assets/images/about_us/tanguy_billon.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="image">
+                    <div class="pt-4 text-center">
+                        <h5 class="title">
+                            <span class="d-block mb-1">Tanguy Billon</span>
+                            <small class="h6 text-muted">Web Developer Junior</small>
+                        </h5>
+                        <div class="mt-3">
+                            <a href="#" class="btn btn-default btn-icon-only rounded-circle">
+                                <i class="fab fa-linkedin-in" aria-hidden="true"></i>
+                            </a>
+                            <a href="#" class="btn btn-default btn-icon-only rounded-circle">
+                                <i class="fab fa-github" aria-hidden="true"></i>
+                            </a>
+                            <a href="#" class="btn btn-default btn-icon-only rounded-circle">
+                                <i class="fab fa-twitter" aria-hidden="true"></i>
+                            </a>
                         </div>
+                    </div>
                 </div>
             </div>
 
             <div class="col-md-12 col-lg-4 mb-12 mb-lg-0">
                 <div class="px-4">
-                    <img alt="image" src="../assets/img/theme/team-3-800x800.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;">
-                        <div class="pt-4 text-center">
-                            <h5 class="title">
-                                <span class="d-block mb-1">Julien Ribeaucourt</span>
-                                <small class="h6 text-muted">Web Developer Junior</small>
-                            </h5>
-                                <div class="mt-3">
-                                    <a href="#" class="btn btn-default btn-icon-only rounded-circle">
-                                        <i class="fab fa-linkedin-in" aria-hidden="true"></i>
-                                    </a>
-                                    <a href="#" class="btn btn-default btn-icon-only rounded-circle">
-                                        <i class="fab fa-github" aria-hidden="true"></i>
-                                    </a>
-                                    <a href="#" class="btn btn-default btn-icon-only rounded-circle">
-                                        <i class="fab fa-twitter" aria-hidden="true"></i>
-                                    </a>
-                                </div>
+                    <img src="././assets/images/about_us/julien_ribeaucourt.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="image">
+                    <div class="pt-4 text-center">
+                        <h5 class="title">
+                            <span class="d-block mb-1">Julien Ribeaucourt</span>
+                            <small class="h6 text-muted">Web Developer Junior</small>
+                        </h5>
+                        <div class="mt-3">
+                            <a href="#" class="btn btn-default btn-icon-only rounded-circle">
+                                <i class="fab fa-linkedin-in" aria-hidden="true"></i>
+                            </a>
+                            <a href="#" class="btn btn-default btn-icon-only rounded-circle">
+                                <i class="fab fa-github" aria-hidden="true"></i>
+                            </a>
+                            <a href="#" class="btn btn-default btn-icon-only rounded-circle">
+                                <i class="fab fa-twitter" aria-hidden="true"></i>
+                            </a>
                         </div>
+                    </div>
                 </div>
             </div>
         </div>
 
         <div class="row">
-            
-            <div class="col-md-12 col-lg-2 mb-12 mb-lg-0"></div>
+
+            <div class="col-md-12 col-lg-2 mb-12 mb-lg-0">
+            </div>
             <div class="col-md-12 col-lg-4 mb-12 mb-lg-0">
                 <div class="px-4">
-                    <img alt="image" src="../assets/img/theme/team-4-800x800.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;">
-                        <div class="pt-4 text-center">
-                            <h5 class="title">
-                                <span class="d-block mb-1">Augustin Bernard</span>
-                                <small class="h6 text-muted">Web Developer Junior</small>
-                            </h5>
-                                <div class="mt-3">
-                                    <a href="#" class="btn btn-default btn-icon-only rounded-circle">
-                                        <i class="fab fa-linkedin-in" aria-hidden="true"></i>
-                                    </a>
-                                    <a href="#" class="btn btn-default btn-icon-only rounded-circle">
-                                        <i class="fab fa-github" aria-hidden="true"></i>
-                                    </a>
-                                    <a href="#" class="btn btn-default btn-icon-only rounded-circle">
-                                        <i class="fab fa-twitter" aria-hidden="true"></i>
-                                    </a>
-                                </div>
+                    <img src="././assets/images/about_us/augustin_bernard.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="image">
+                    <div class="pt-4 text-center">
+                        <h5 class="title">
+                            <span class="d-block mb-1">Augustin Bernard</span>
+                            <small class="h6 text-muted">Web Developer Junior</small>
+                        </h5>
+                        <div class="mt-3">
+                            <a href="#" class="btn btn-default btn-icon-only rounded-circle">
+                                <i class="fab fa-linkedin-in" aria-hidden="true"></i>
+                            </a>
+                            <a href="#" class="btn btn-default btn-icon-only rounded-circle">
+                                <i class="fab fa-github" aria-hidden="true"></i>
+                            </a>
+                            <a href="#" class="btn btn-default btn-icon-only rounded-circle">
+                                <i class="fab fa-twitter" aria-hidden="true"></i>
+                            </a>
                         </div>
+                    </div>
                 </div>
             </div>
 
             <div class="col-md-12 col-lg-4 mb-12 mb-lg-0">
                 <div class="px-4">
-                    <img alt="image" src="../assets/img/theme/team-4-800x800.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;">
-                        <div class="pt-4 text-center">
-                            <h5 class="title">
-                                <span class="d-block mb-1">Baptiste Geffroy</span>
-                                <small class="h6 text-muted">Web Developer Junior</small>
-                            </h5>
-                                <div class="mt-3">
-                                    <a href="#" class="btn btn-default btn-icon-only rounded-circle">
-                                        <i class="fab fa-linkedin-in" aria-hidden="true"></i>
-                                    </a>
-                                    <a href="#" class="btn btn-default btn-icon-only rounded-circle">
-                                        <i class="fab fa-github" aria-hidden="true"></i>
-                                    </a>
-                                    <a href="#" class="btn btn-default btn-icon-only rounded-circle">
-                                        <i class="fab fa-twitter" aria-hidden="true"></i>
-                                    </a>
-                                </div>
+                    <img src="././assets/images/about_us/baptiste_geffroy.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="image">
+                    <div class="pt-4 text-center">
+                        <h5 class="title">
+                            <span class="d-block mb-1">Baptiste Geffroy</span>
+                            <small class="h6 text-muted">Web Developer Junior</small>
+                        </h5>
+                        <div class="mt-3">
+                            <a href="#" class="btn btn-default btn-icon-only rounded-circle">
+                                <i class="fab fa-linkedin-in" aria-hidden="true"></i>
+                            </a>
+                            <a href="#" class="btn btn-default btn-icon-only rounded-circle">
+                                <i class="fab fa-github" aria-hidden="true"></i>
+                            </a>
+                            <a href="#" class="btn btn-default btn-icon-only rounded-circle">
+                                <i class="fab fa-twitter" aria-hidden="true"></i>
+                            </a>
                         </div>
+                    </div>
                 </div>
             </div>
-            <div class="col-md-0 col-lg-2 mb-0 mb-lg-0"></div>
+            <div class="col-md-0 col-lg-2 mb-0 mb-lg-0">
+            </div>
         </div>
     </div>
 </section>
