--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -67,7 +67,7 @@
 
 								<% if user_signed_in? %>
 									<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbar-default_dropdown_1">
-										<a class="dropdown-item" href="#">My profile</a>
+										<%= link_to "My profile", edit_user_registration_path, class: "dropdown-item" %>
 										<%= link_to "Disconnect", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
 									</div>
 								<% else %>
