--- a/app/views/surveys/new.html.erb
+++ b/app/views/surveys/new.html.erb
@@ -1,10 +1,4 @@
-<%= content_tag :div,
-id: 'survey-form',
-data: { survey: @survey.to_json(except: [:created_at, :updated_at]),
-question_attributes: @survey.questions.to_json(except: [:survey_id, :created_at, :updated_at]),
-} do %>
-
-  <% if user_signed_in? %>
+<% if user_signed_in? %>
 
     <p> Voici ton ID : <%= current_user.id %> </p>
 
@@ -12,8 +6,15 @@ question_attributes: @survey.questions.to_json(except: [:survey_id, :created_at,
 
   <%= form_for @survey, url: surveys_path do |f| %>
     <label for="title" >Title of the survey
-    <%= f.text_field :title, "v-model": "survey.title"%> </br>
+    <%= f.text_field :title %> </br>
     <%= f.hidden_field :user_id, value: @user.id %>
+    <% for question in @survey.questions %>
+    <% fields_for "...", question do |question_form| %>
+    <p>
+      Question : <%= question_form.text_field :content %>
+    </p>
+    <% end %>
+    <% end %>
     <%= f.submit 'create', :name => 'commit' %>
   <% end %>
 
@@ -25,13 +26,11 @@ question_attributes: @survey.questions.to_json(except: [:survey_id, :created_at,
 
 
     <!-- si le user n'est pas connecté alors on le renvoit vers les liens -->
-    <% else %>
+  <% else %>
     
-        <%= link_to "Sign in", new_user_session_path %>
+      <%= link_to "Sign in", new_user_session_path %>
 
 
-        <%= link_to "Sign up", new_user_registration_path %>
-
-    <% end %>
+      <%= link_to "Sign up", new_user_registration_path %>
 
 <% end %>
