--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,22 +3,18 @@
 <head>
 	<!-- Favicon -->
 	<link href="assets/images/brand/favicon.png" rel="icon" type="image/png">
-	<!-- Fonts -->
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
-	<!-- Icons -->
-	<link href="assets/vendor/nucleo/css/nucleo.css" rel="stylesheet">
-	<link href="assets/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-	<script src="https://kit.fontawesome.com/b5db9ccac9.js" crossorigin="anonymous"></script>
-	<!-- Application CSS -->
-	<link type="text/css" href="assets/stylesheets/application.css?v=1.1.0" rel="stylesheet">
-	<!-- Bootstrap -->
-	<link type="text/css" href="assets/stylesheets/bootstrap/bootstrap.css?v=1.1.0" rel="stylesheet">
-	<link type="text/css" href="assets/stylesheets/bootstrap/bootstrap-grid.css?v=1.1.0" rel="stylesheet">
-	<link type="text/css" href="assets/stylesheets/bootstrap/bootstrap-reboot.css?v=1.1.0" rel="stylesheet">
 
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+	<!-- Icons -->
+	<script src="https://kit.fontawesome.com/b5db9ccac9.js" crossorigin="anonymous"></script>
+
+
+	<!-- jquery -->
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+
+	<!-- Bootstrap -->
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
 	<title>SatisFaction</title>
