--- a/app/views/surveys/new.html.erb
+++ b/app/views/surveys/new.html.erb
@@ -5,7 +5,7 @@
 
 
   <%= form_for @survey, url: surveys_path do |f| %>
-    <label for="title" >Title of the survey
+    <label for="title" >Title of the survey </label>
     <%= f.text_field :title %> </br>
     <%= f.hidden_field :user_id, value: @user.id %>
     <% for question in @survey.questions %>
