--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -29,9 +29,26 @@
 		                <%= link_to 'Back', surveys_path, class: "btn btn-danger" %>
 		              </div>
             		</div>
+                  <hr>
+                  <%= form_for List.new , url: lists_path do |f| %>
+                    <div class="form-group mb-3">
+ 
+                        <label for="email"> Entre les emails des destinataires de la survey séparés par une virgule et un espace (a, b, ..) </label> </br>
+                        <%= f.text_field :email, class: "form-control", placeholder: "jack@gmail.com, brigitte@gmail.com" %> </br>
+
+                    </div>
+
+                    <%= f.submit 'create', :name => 'commit', :value => 'Envoyer', class: "btn btn-success" %>
+                  <% end %>
               </div>
             </div>
           </div>
         </div>
       </div>
+
+
+
+
+
+
 </section>
