--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -2996,7 +2996,7 @@ textarea.form-control
 
     display: inline-block;
 
-    padding: .625rem 1.25rem;
+    padding: 1.25rem 1.25rem;
 
     -webkit-user-select: none;
        -moz-user-select: none;
@@ -5485,8 +5485,7 @@ input[type='button'].btn-block
     display: inline-block;
 
     margin-right: 1rem;
-    padding-top: .0625rem;
-    padding-bottom: .0625rem;
+    padding: .25rem .75rem;
 
     white-space: nowrap;
 }
