--- a/app/views/surveys/index.html.erb
+++ b/app/views/surveys/index.html.erb
@@ -1,29 +1,39 @@
-<p id="notice"><%= notice %></p>
+<section class="py-5 bg-secondary" style="min-height: 84%">
 
-<h1>Surveys</h1>
+  <p id="notice"><%= notice %></p>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Created at</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+  <h1 class="text-center">Your Surveys</h1>
 
-  <tbody>
-    <% @user.surveys.each do |survey| %>
+  <table class="table col-8 text-center center"  style="border-style: solid; border-color: gray">
+    <thead class="table-active">
       <tr>
+        <th scope="col">Title</th>
+        <th scope="col">Created at</th>
+        <th scope="col">Show</th>
+        <th scope="col">Edit</th>
+        <th scope="col">Delete</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <% a = 0 %>
+        <% @user.surveys.each do |survey| %>
         <td><%= survey.title %></td>
         <td><%= survey.created_at.strftime("%d %b %Y") %></td>
-        <td><%= link_to 'Show', survey %> | </td>
-        <td><%= link_to 'Edit', edit_survey_path(survey) %> | </td>
-        <td><%= link_to 'Destroy', survey, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to '<i class="fas fa-eye"></i>'.html_safe, survey, class: "btn btn-primary btn-sm"%></td>  
+        <td><%= link_to '<i class="fas fa-edit"></i>'.html_safe, edit_survey_path(survey), class: "btn btn-info btn-sm" %> </td>
+        <td><%= link_to '<i class="fas fa-trash-alt"></i>'.html_safe, survey, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger btn-sm" %></td>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+      <% end %>
+    </tbody>
+  </table>
 
-<br>
+  <div class="container">
+    <div class="row justify-content-md-center">
+      <div class="col col-2">
+        <%= link_to 'New Survey', new_survey_path, class: "btn btn-success" %>
+      </div>
+    </div>
+  </div>
 
-<%= link_to 'New Survey', new_survey_path %>
+</section>
