--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -1,3 +1,4 @@
+<% if current_user == @survey.user_id %>
 <section class="py-5 bg-secondary" style="min-height: 84%">
 
 	<p id="notice"><%= notice %></p>
@@ -45,8 +46,9 @@
           </div>
         </div>
       </div>
-
-
+<% else %>
+<% controller.redirect_to root_path %>
+<% end %>
 
 
 
