--- a/app/views/surveys/edit.html.erb
+++ b/app/views/surveys/edit.html.erb
@@ -1,6 +1,10 @@
+<% if @survey.user_id == current_user.id %>
 <h1>Editing Survey</h1>
 
 <%= render 'form', survey: @survey %>
 
 <%= link_to 'Show', @survey %> |
 <%= link_to 'Back', surveys_path %>
+<% else %>
+<% controller.redirect_to root_path %>
+<% end %>
