--- a/app/views/static/index_contact_us.html.erb
+++ b/app/views/static/index_contact_us.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
-	<div class="card-body p-lg-5">
-		<h4 class="mb-1">Want to work with us?</h4>
-		<p class="mt-0">Your project is very important to us.</p>
+	<div class="card-body p-lg-5" style="text-align: center;">
+		<h4 class="mb-1">You want to contact us?</h4>
+		<p class="mt-0">Your opinion is very important to us.</p>
 		<div class="form-group mt-5">
 			<div class="input-group input-group-alternative">
 				<div class="input-group-prepend">
