--- a/app/views/static/index_our_services.html.erb
+++ b/app/views/static/index_our_services.html.erb
@@ -1,7 +1,69 @@
-<div class="container">
-	<div>
-		<h1>J'ai pas d'inspi sorry</h1>
-	</div>
-</div>
-
-
+<section class="section section-lg">
+  <div class="container">
+    <div class="row row-grid align-items-center">
+      <div class="col-md-6 order-md-2">
+        <img src="https://demos.creative-tim.com/argon-design-system/assets/img/theme/promo-1.png" class="img-fluid floating">
+      </div>
+      <div class="col-md-6 order-md-1">
+        <div class="pr-md-5">
+          <div class="icon icon-lg icon-shape icon-shape-success shadow rounded-circle mb-5">
+            <i class="fas fa-heartbeat"></i>
+          </div>
+          <h3>Take the pulse of your customers ! </h3>
+          <p>Thanks to Satis' faction, you will be able to listen to your customers, know what they think of you and thus improve your relationship with them! <b> So, how does Satis' faction work?  </b> </p>
+          <ul class="list-unstyled mt-5">
+            <li class="py-2">
+              <div class="d-flex align-items-center">
+                <div>
+                  <div class="badge badge-circle badge-success mr-3">
+                    <i class="fas fa-user-tie"></i>
+                  </div>
+                </div>
+                <div>
+                  <h6 class="mb-0"> Create an account ! </h6>
+                </div>
+              </div>
+            </li>
+            <li class="py-2">
+              <div class="d-flex align-items-center">
+                <div>
+                  <div class="badge badge-circle badge-success mr-3">
+                    <i class="fas fa-paste"></i>
+                  </div>
+                </div>
+                <div>
+                  <h6 class="mb-0"> Create a survey ! </h6>
+                </div>
+              </div>
+            </li>
+            <li class="py-2">
+              <div class="d-flex align-items-center">
+                <div>
+                  <div class="badge badge-circle badge-success mr-3">
+                    <i class="fas fa-paper-plane"></i>
+                  </div>
+                </div>
+                <div>
+                  <h6 class="mb-0">Send the survey to your clients  !</h6>
+            </li>
+            <li class="py-2">
+              <div class="d-flex align-items-center">
+                <div>
+                  <div class="badge badge-circle badge-success mr-3">
+                    <i class="fas fa-chart-pie"></i>
+                  </div>
+                </div>
+                <div>
+                  <h6 class="mb-0"> Check your results (in progress) ! </h6>
+                </div>
+              </div>
+            </li>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
